Fix compatibility issue in sed. Do so by explicitely adding a newline to the end of any -e argument.

PR: bin/18474